--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,22 @@
+@import './mixins/media.scss';
+
 .app {
 	&-content {
-		margin: 50px 10px;
+		margin: 0;
 		display: flex;
+		flex-direction: column;
 		justify-content: space-between;
+
+		@include desktop {
+			margin: 50px 10px;
+			flex-direction: row;
+		}
 	}
 
 	&-header {
 		text-align: center;
 		text-transform: capitalize;
 	}
+
+	
 }
