--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,12 @@ html {
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 }
+
+.clickable {
+	cursor: pointer;
+}
+
+.rounded-grey-border {
+	border: 1px solid #d5d5d5;
+    border-radius: 6px;
+}
