--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,3 @@
-@import './mixins/media.scss';
-
 .app {
 	&-content {
 		margin: 0;
@@ -7,7 +5,7 @@
 		flex-direction: column;
 		justify-content: space-between;
 
-		@include desktop {
+		@media only screen and (min-width: 950px) {
 			margin: 50px 10px;
 			flex-direction: row;
 		}
@@ -17,6 +15,4 @@
 		text-align: center;
 		text-transform: capitalize;
 	}
-
-	
 }
