--- a/src/components/Computer/Computer.scss
+++ b/src/components/Computer/Computer.scss
@@ -1,10 +1,8 @@
-@import '../../mixins/media.scss';
-
 .computer {
 	width: auto;
 	padding: 30px;
 
-	@include desktop {
+	@media only screen and (min-width: 950px) {
 		width: 50%;
 	}
 }
